# ost

./: .gitignore  Cargo.toml  Justfile  README.md  shell.nix
.claude/agents/: ratatui-tui-expert.md
backlog/: config.yml
backlog/tasks/: task-0001 - Implement-TUI-chat-client.md  task-0001.01 - TUI-Basic-app-shell-with-header-and-status-bar.md  task-0001.02 - TUI-Left-pane-with-Teams-hierarchy-and-Chats-list.md  task-0001.03 - TUI-Main-message-pane-with-threaded-messages.md  task-0001.04 - TUI-Compose-box-with-formatting-toolbar.md  task-0001.05 - TUI-Help-popup-overlay.md  task-0001.06 - TUI-Keyboard-navigation-and-focus-management.md  task-0001.07 - TUI-Global-search-with-CtrlK.md  task-0002 - Wire-TUI-to-real-Teams-API-send-receive-list.md  task-0003 - Add-TUI-debug-log-pane-with-buffered-tracing-capture.md  task-0004 - Fix-title-bar-left-truncation-shows-OST-Client-instead-of-full-name.md  task-0005 - Fix-status-contradiction-top-bar-shows-online-while-bottom-shows-Connecting....md  task-0006 - Fix-empty-channel-showing-Select-a-channel-placeholder-instead-of-No-messages.md  task-0007 - Use-shorter-human-readable-timestamps-on-chat-messages.md  task-0008 - Replace-ASCII-art-message-borders-with-colorized-backgrounds.md  task-0009 - Use-emojis-as-specified-in-the-TUI-spec.md  task-0010 - TUI-UX-tour-scroll-through-chats-to-find-message-rendering-issues.md  task-0011 - Parse-meeting-event-messages-instead-of-rendering-raw-JSON.md  task-0012 - Help-popup-does-not-fully-cover-underlying-content.md  task-0013 - Audit-compose-toolbar-remove-or-implement-non-functional-controls.md  task-0014 - Per-user-message-colors-via-username-hash-and-right-align-own-messages.md  task-0015 - Desktop-notifications-for-messages-mentioning-me.md  task-0017 - Update-openh264-sys2-to-fix-heap-overflow-vulnerability.md  (+1 more)
docs/: GUIDs.md  architecture.md  terminology_index.md
src/: main.rs
tests/: e2e_chats.sh  e2e_echo123.sh  e2e_read.sh  e2e_teams.sh  e2e_trouter.sh
(+116 files in other folders)
