[package]
name = "teams-cli"
version = "0.1.0"
edition = "2021"
description = "Lightweight CLI client for Microsoft Teams"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (use 0.11 for rustc 1.82 compatibility, native-tls avoids ICU issue)
reqwest = { version = "0.11", features = ["json", "native-tls"], default-features = false }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OAuth2 / Authentication
oauth2 = { version = "4", features = ["reqwest"] }
url = "2"
# Pin home to avoid 0.5.12 which requires edition 2024 (rustc 1.85+)
home = "=0.5.11"
base64 = "0.22"
sha1 = "0.10"
sha2 = "0.10"
flate2 = { version = "1", features = ["zlib-rs"], default-features = false }

# SRTP crypto (AES-128-CM + HMAC-SHA1-80)
getrandom = "0.2"
aes = "0.8"
ctr = "0.9"
hmac = "0.12"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI (Ratatui)
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-stream = "0.1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config/storage
directories = "5"
toml = "0.8"

# Async utilities
futures = "0.3"

# WebSocket (Trouter)
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
unicode-width = "0.2"

# Audio I/O (optional — requires ALSA headers on Linux)
cpal = { version = "0.15", optional = true }

# Video capture/display (optional — requires V4L2, SDL2, nasm on Linux)
v4l = { version = "0.14", optional = true }
openh264 = { version = "0.9", optional = true }
sdl2 = { version = "0.37", optional = true }

[features]
default = []
audio = ["cpal"]
video-capture = ["v4l", "openh264", "sdl2"]

[dev-dependencies]
tokio-test = "0.4"
